--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -91,6 +91,25 @@
         .radio-group {
             margin-left: 5%;
         }
+
+        .toast-notification {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: linear-gradient(to right, #ff6b6b, #ee5a24);
+            color: white;
+            padding: 10px 15px;
+            border-radius: 5px;
+            z-index: 9999;
+            max-width: 300px;
+            word-wrap: break-word;
+            cursor: pointer;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+            font-family: Arial, sans-serif;
+            font-size: 14px;
+            transition: opacity 0.3s ease;
+        }
+
     </style>
 </head>
 <body>
